refactor: Refatorar hooks e PostsCards para maior eficiência

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "treinotailwind",
+    "name": "projeto-mern-stack",
     "private": true,
     "version": "0.0.0",
     "type": "module",
