--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.10.0",
+        "dotenv": "^17.0.0",
         "lucide-react": "^0.523.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-error-boundary": "^6.0.0",
         "react-router-dom": "^7.6.2",
         "tailwindcss": "^4.1.11"
     },
