feat: Integrar formatação markdown ao conteúdo do post

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^19.1.0",
         "react-error-boundary": "^6.0.0",
         "react-router-dom": "^7.6.2",
+        "showdown": "^2.1.0",
         "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
